# minddrop

./: .eslintrc.js  .gitignore  .hygen.js  .prettierrc  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.build.native.json  tsconfig.json  tsconfig.native.json  turbo.json
.github/workflows/: yarn.yml
.husky/: pre-commit
apps/desktop/: .eslintrc.json  create-first-workspace.html  eslint.config.js  index.html  jest.config.ts  package.json  tsconfig.build.json  vite.config.ts  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js
apps/desktop-electrobun/: electrobun.config.ts  eslint.config.js  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: migrated.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/dev-tools/: electrobun.config.ts  package.json  tsconfig.json  vite.config.ts
apps/docs/: .eslintrc.js  docusaurus.config.js  package.json  tsconfig.json
apps/storybook/: package.json
apps/web/: package.json
apps/website/: next.config.js  package.json
dev/dev-tools/: package.json
dev/docs/: creating-design-elements.md  creating-feature-packages.md  design-studio.md
extensions/board-view/: package.json
extensions/bookmark-block/: package.json
extensions/bookmark-drop/: package.json
extensions/document-type-board/: package.json
extensions/document-type-note/: package.json
extensions/image-block/: package.json
extensions/image-drop/: package.json
features/designs/: package.json
(+1993 files in other folders)
